--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Layout Responsive</title>
 </head>
 <body>
-    
+    <header>
+        <section class="section"></section>
+        <section class="section"></section>
+    </header>
+    <main>
+        <section class="section3"></section>
+        <section class="section4">
+            <article class="article"></article>
+            <article class="article"></article>
+            <article class="article"></article>
+        </section>
+    </main>
+    <footer>
+        <section class="section5"></section>
+        <section class="section5"></section>
+        <section class="section5"></section>
+        <section class="section5"></section>
+    </footer>
 </body>
 </html>
